Alterações nos models e relações entre entidades

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8080
 #mysql://b7d60cb7d7e375:5a17a0ba@us-cdbr-east-04.cleardb.com/heroku_954196225479bb1?reconnect=true
+server.servlet.context-path=/api
 # MySQL
 spring.datasource.url=jdbc:mysql://us-cdbr-east-04.cleardb.com:3306/heroku_954196225479bb1?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=b7d60cb7d7e375
